--- a/loja.html
+++ b/loja.html
@@ -34,31 +34,31 @@
     <div class="row text-center text-lg-left">
 
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="http://www.under-dogs.net/content/editions/1512237769.jpg" alt="" width="250px" height="300px">
+        <img src="loja/1.jpg" alt="" width="250px" height="300px">
         <h3 style="color: white; text-align: center;">90,00€</h3>
       </div>
 
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="https://images.arcadja.com/vhils-dissonance_7~OM9ce300~10051_20170425_xb1r2kvlg6_96.jpg" alt="" width="250px" height="300px">
+        <img src="loja/2.png" alt="" width="250px" height="300px">
                 <h3 style="color: white; text-align: center;">550,00€</h3>
       </div>
 
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="http://www.under-dogs.net/content/editions/1498232987.jpg" alt="" width="250px" height="300px">
+        <img src="loja/3.jpg" alt="" width="250px" height="300px">
                 <h3 style="color: white; text-align: center;">1000,00€</h3>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="http://www.under-dogs.net/content/editions/1500906340.jpg" alt="" width="250px" height="300px">
+        <img src="loja/4.jpg" alt="" width="250px" height="300px">
                 <h3 style="color: white; text-align: center;">50,00€</h3>
       </div>
       <br>
       <br>
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="http://www.under-dogs.net/content/editions/1498231103.jpg" alt="" width="250px" height="300px">
+        <img src="loja/5.jpg" alt="" width="250px" height="300px">
                 <h3 style="color: white; text-align: center;">80,00€</h3>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6">
-        <img src="http://www.under-dogs.net/content/editions/1491993041.jpg" alt="" width="250px" height="300px">
+        <img src="loja/6.jpg" alt="" width="250px" height="300px">
                 <h3 style="color: white; text-align: center;">200,00€</h3>
       </div>
       
